--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "devDependencies": {
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=18.18.0 <20.12.2.0"
   }
 }
